--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<div class="container-fluid footer">
+    <div class="row">
+        <div class="col-lg-6">
+            <h1>Anel Soluções</h1>
+            <p>CNPJ: XX. XXX. XXX/0001-XX</p>
+        </div>
+        <div class="col-lg-4">
+            <a routerLink="">Home</a>
+            <a routerLink="menu">Menu</a>
+            <a routerLink="about">Sobre</a>
+            <a routerLink="contact">Contato</a>
+        </div>
+        <div class="col-lg-2">
+            <a href="" target="_blank"><i class="bi bi-telephone"></i></a>
+            <a href="" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            
+    </div>
+</div>
