--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+*
+{
+    padding: 0;
+    margin: 0;
+}
+
+:root{
+    --primeira-color: rgb(190, 172, 67);
+}
+
+body{
+    background-color: rgb(24, 23, 23);
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
