--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid footer">
     <div class="row">
         <div class="col-lg-6">
-            <h1>Anel Soluções</h1>
+            <h1>Anel Empreendimentos</h1>
             <p>CNPJ: XX. XXX. XXX/0001-XX</p>
         </div>
         <div class="col-lg-4">
